# code-clean

./: CMakeLists.txt  README.md
src/: main.cpp  menu.cpp  play_guess_the_number.cpp  play_hangman.cpp  random.cpp
src/include/: get_input_from_user.hpp  menu.hpp  play_guess_the_number.hpp  play_hangman.hpp  random.hpp
